# vice_ROS_OD_SC

./: README.md  lidar_screenshot.pcd
catkin_ws/: lidar_screenshot.pcd
catkin_ws/build_isolated/: catkin_make_isolated.cache
catkin_ws/build_isolated/acquisition/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
catkin_ws/build_isolated/acquisition/atomic_configure/: .rosinstall
catkin_ws/build_isolated/acquisition/catkin_generated/: generate_cached_setup.py  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
catkin_ws/build_isolated/acquisition/catkin_generated/installspace/: acquisition.pc  acquisitionConfig.cmake  setup.sh
catkin_ws/build_isolated/acquisition/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
catkin_ws/build_isolated/acquisition/gtest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
catkin_ws/build_isolated/agitr/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
catkin_ws/build_isolated/agitr/atomic_configure/: .rosinstall  _setup_util.py
catkin_ws/build_isolated/agitr/catkin_generated/: generate_cached_setup.py  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
catkin_ws/build_isolated/agitr/catkin_generated/installspace/: .rosinstall  agitr.pc  agitrConfig.cmake  local_setup.sh
catkin_ws/build_isolated/agitr/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
catkin_ws/build_isolated/agitr/gtest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
catkin_ws/build_isolated/data_pre_processing/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
catkin_ws/build_isolated/data_pre_processing/atomic_configure/: .rosinstall  _setup_util.py  local_setup.sh  setup.sh
catkin_ws/build_isolated/data_pre_processing/catkin_generated/: generate_cached_setup.py  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
catkin_ws/build_isolated/data_pre_processing/catkin_generated/installspace/: data_pre_processing.pc  data_pre_processingConfig.cmake
catkin_ws/build_isolated/data_pre_processing/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
catkin_ws/build_isolated/data_pre_processing/gtest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
catkin_ws/build_isolated/loam_livox/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
catkin_ws/build_isolated/loam_livox/atomic_configure/: local_setup.sh  setup.sh
catkin_ws/build_isolated/loam_livox/catkin_generated/: generate_cached_setup.py  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
catkin_ws/build_isolated/loam_livox/catkin_generated/installspace/: _setup_util.py  loam_livox.pc  loam_livoxConfig.cmake
catkin_ws/build_isolated/loam_livox/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
catkin_ws/build_isolated/loam_livox/gtest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
catkin_ws/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
catkin_ws/devel/lib/agitr/: hello  pubvel  pubvel_toggle  pubvel_with_max  reverse_cmd_vel  set_bg_color  spawn_turtle
catkin_ws/devel/lib/data_acquisition/: acquire  pcl_lidar_screenshot  pcl_lidar_view  range_image
catkin_ws/devel/lib/data_pre_processing/: lidar_screenshot.pcd  lidar_screenshot_test.pcd  pcl_lidar_screenshot  pcl_lidar_view  pcl_view_lidar  pcl_view_lidar_live  range_image  range_image_pcl  visualize_range_image
catkin_ws/devel/lib/loam_livox/: read_camera
catkin_ws/devel/lib/pkgconfig/: acquisition.pc  agitr.pc  data_acquisition.pc  data_pre_processing.pc  loam_livox.pc
catkin_ws/devel/share/acquisition/cmake/: acquisitionConfig.cmake
catkin_ws/devel/share/agitr/cmake/: agitrConfig.cmake
catkin_ws/devel/share/data_acquisition/cmake/: data_acquisitionConfig.cmake
catkin_ws/devel/share/data_pre_processing/cmake/: data_pre_processingConfig.cmake
catkin_ws/devel/share/loam_livox/cmake/: loam_livoxConfig.cmake
catkin_ws/devel_isolated/: env.sh  setup.bash  setup.sh  setup.zsh
catkin_ws/devel_isolated/acquisition/: .catkin  _setup_util.py  local_setup.sh  setup.sh
catkin_ws/devel_isolated/acquisition/lib/acquisition/: acquire
catkin_ws/devel_isolated/acquisition/lib/pkgconfig/: acquisition.pc
catkin_ws/devel_isolated/agitr/: .catkin  local_setup.sh  setup.sh
catkin_ws/devel_isolated/agitr/lib/agitr/: hello  pubvel  subpose
catkin_ws/devel_isolated/agitr/lib/pkgconfig/: agitr.pc
catkin_ws/devel_isolated/data_pre_processing/: .catkin
catkin_ws/devel_isolated/loam_livox/: .catkin  .rosinstall
catkin_ws/src/acquisition/: CMakeLists.txt  acquisition.cpp
catkin_ws/src/acquisition/src/: main.cpp
catkin_ws/src/agitr/: CMakeLists.txt  hello.cpp
catkin_ws/src/agitr/include/: pubvel.hpp  reverse_cmd_vel.hpp  subpose.hpp
catkin_ws/src/agitr/launch/: doublesim.launch  example.launch  fast_yellow.launch  reversed.launch  triplesim.launch
catkin_ws/src/agitr/src/: pubvel.cpp  pubvel_toggle.cpp  pubvel_with_max.cpp  reverse_cmd_vel.cpp  set_bg_color.cpp  spawn_turtle.cpp  subpose.cpp
catkin_ws/src/data_acquisition/: CMakeLists.txt  package.xml
catkin_ws/src/data_acquisition/data/: lidar_screenshot_clean.pcd
catkin_ws/src/data_acquisition/include/: acquisition.hpp  pcl_lidar_screenshot.hpp
catkin_ws/src/data_acquisition/scripts/: clean_point_cloud.py
catkin_ws/src/data_acquisition/src/: acquisition.cpp  pcl_lidar_screenshot.cpp  pcl_lidar_view.cpp  range_image.cpp
catkin_ws/src/data_pre_processing/: CMakeLists.txt  package.xml
catkin_ws/src/data_pre_processing/include/: pcl_lidar_screenshot.hpp  pcl_lidar_screenshot_copy.hpp  pcl_lidar_view.hpp  pcl_view_lidar.hpp  pcl_view_lidar_WRK.hpp
catkin_ws/src/data_pre_processing/src/: lidar_screenshot.pcd  pcl_lidar_screenshot.cpp  pcl_lidar_screenshot_copy.cpp  pcl_lidar_view.cpp  pcl_view_lidar.cpp  pcl_view_lidar_WRK.cpp  range_image.cpp  range_image_pcl.cpp  test_pcd.pcd
(+21 files in other folders)
