<?xml version="1.0"?>
<package format="2">
  <name>acquisition</name>
  <version>0.0.0</version>

  <description>
  Data acquisition from Livox MID 40 package
  Created by: Vice, 15.03.2021
  </description>
  
  <maintainer email="vice.roncevic@gmail.com">luxc</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend>

  <!--Check-->
  <build_depend>libluxc</build_depend>
  <exec_depend>libluxc</exec_depend>
  
  <export>
  </export>
</package>