<?xml version="1.0"?>
<package format="2">
  <name>data_pre_processing</name>
  <version>0.0.0</version>

  <description>
  Data pre processing of the Livox Mid 40 data
  Created by: Vice, 24.06.2021
  </description>

  <maintainer email="vice.roncevic@gmail.com">luxc</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>

  <build_export_depend>rospy</build_export_depend>
  
  <exec_depend>rospy</exec_depend>
  

  <export>
  </export>
</package>
